[package]
name = "rilox"
version = "0.1.0"
authors = ["Alex Veber <alexveber@gmail.com>"]
edition = "2021"


[dependencies]
qcell = "0.4.3"
rustc-hash = "1.1.0"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
debug = true

[profile.bench]
lto = "fat"
codegen-units = 1
debug = true

[[test]]
name = "rilox"
path = "tests/runner.rs"
harness = false

[[bench]]
name = "rilox"
path = "benches/runner.rs"
harness = false
